# iwadi

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  genindex.html  index.html  modules.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  src.ai.html  src.api.html  src.cli.commands.html  src.cli.html  src.cli.utils.html  src.html  src.storage.html
.github/workflows/: deploy-docs.yml
_sources/: index.md.txt  src.cli.rst.txt  src.cli.utils.rst.txt  src.rst.txt  src.storage.rst.txt
docs/source/: conf.py  index.rst  src.ai.rst  src.api.rst  src.cli.commands.rst
src/ai/: chat.py  parser.py  summarize.py
src/api/: __init__.py  arxiv.py  arxiv_api.py  base.py  base_api.py  base_api_error.py  ieee_api.py  xploreapi.py
src/cli/: app.py  context.py  project.py
src/cli/commands/: create_project.py  list_projects.py  project_create.py  project_list.py  save.py  search.py  view.py
src/cli/utils/: completion.py  display.py  error_handler.py  interactive.py
src/storage/: db.py  init_db.py
tests/: __init__.py  test_arxiv.py  test_ieee.py
tests/integration/: test_cli_flow.py
tests/test_commands/: test_create_project.py  test_list_projects.py  test_save.py  test_search.py  test_view.py
